--- a/notebooks/Taller8AREP.ipynb
+++ b/notebooks/Taller8AREP.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0098a115",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,137 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: langchain in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.3.21)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: langchain in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.3.21)\n",
+      "Requirement already satisfied: langchain-core<1.0.0,>=0.3.45 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (0.3.47)\n",
+      "Requirement already satisfied: langchain-text-splitters<1.0.0,>=0.3.7 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (0.3.7)\n",
+      "Requirement already satisfied: langsmith<0.4,>=0.1.17 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (0.3.18)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (2.10.6)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (2.0.39)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (2.32.3)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (6.0.2)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.45->langchain) (9.0.0)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.45->langchain) (1.33)\n",
+      "Requirement already satisfied: packaging<25,>=23.2 in c:\\users\\laura\\appdata\\roaming\\python\\python312\\site-packages (from langchain-core<1.0.0,>=0.3.45->langchain) (23.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.7 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain-core<1.0.0,>=0.3.45->langchain) (4.12.2)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langsmith<0.4,>=0.1.17->langchain) (0.28.1)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langsmith<0.4,>=0.1.17->langchain) (3.10.15)\n",
+      "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langsmith<0.4,>=0.1.17->langchain) (1.0.0)\n",
+      "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langsmith<0.4,>=0.1.17->langchain) (0.23.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.27.2 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (2.27.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2->langchain) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2->langchain) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2->langchain) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2->langchain) (2025.1.31)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain) (3.1.1)\n",
+      "Requirement already satisfied: anyio in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (4.9.0)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (1.0.7)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (0.14.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.45->langchain) (3.0.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (1.3.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install langchain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6ab300b",
+   "metadata": {},
+   "source": [
+    "# Configuramos LangSmith\n",
+    "LangSmith permite realizar trazabilidad y depuración de las llamadas a modelos de lenguaje."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8bf834c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"LANGSMITH_API_KEY\"] = \"KEY\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acd39950",
+   "metadata": {},
+   "source": [
+    "LangChain con integraciones específicas para OpenAI:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f0394528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install -qU \"langchain[openai]\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6e93509",
+   "metadata": {},
+   "source": [
+    "## Configuración de langSmith\n",
+    "\n",
+    "LangSmith permite realizar trazabilidad y depuración de las llamadas a modelos de lenguaje."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7425d013",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
+    "  os.environ[\"OPENAI_API_KEY\"] = \"acá va la clave\"\n",
+    "\n",
+    "from langchain.chat_models import init_chat_model\n",
+    "\n",
+    "model = init_chat_model(\"gpt-4o-mini\", model_provider=\"openai\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c4fd395",
+   "metadata": {},
+   "source": [
+    "Luego, podemos realizar una llamada al modelo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "36e5b57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langchain in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.3.21)\n",
       "Requirement already satisfied: langchain-core<1.0.0,>=0.3.45 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (0.3.47)\n",
       "Requirement already satisfied: langchain-text-splitters<1.0.0,>=0.3.7 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (0.3.7)\n",
       "Requirement already satisfied: langsmith<0.4,>=0.1.17 in c:\\users\\laura\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from langchain) (0.3.18)\n",
@@ -53,130 +182,33 @@
     }
    ],
    "source": [
-    "pip install langchain"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6ab300b",
-   "metadata": {},
-   "source": [
-    "# Configuramos LangSmith\n",
-    "LangSmith permite realizar trazabilidad y depuración de las llamadas a modelos de lenguaje."
+    "!pip install --upgrade langchain\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8bf834c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import getpass\n",
-    "import os\n",
-    "\n",
-    "os.environ[\"LANGSMITH_API_KEY\"] = \"KEY\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "acd39950",
-   "metadata": {},
-   "source": [
-    "LangChain con integraciones específicas para OpenAI:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f0394528",
+   "execution_count": 8,
+   "id": "cdceea1c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "[SystemMessage(content='Translate the following from English into Italian', additional_kwargs={}, response_metadata={}), HumanMessage(content='hi!', additional_kwargs={}, response_metadata={})]\n"
      ]
     }
    ],
    "source": [
-    "pip install -qU \"langchain[openai]\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6e93509",
-   "metadata": {},
-   "source": [
-    "## Configuración de langSmith\n",
-    "\n",
-    "LangSmith permite realizar trazabilidad y depuración de las llamadas a modelos de lenguaje."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7425d013",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import getpass\n",
-    "import os\n",
-    "\n",
-    "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
-    "  os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"Enter API key for OpenAI: \")\n",
-    "\n",
-    "from langchain.chat_models import init_chat_model\n",
-    "\n",
-    "model = init_chat_model(\"gpt-4o-mini\", model_provider=\"openai\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c4fd395",
-   "metadata": {},
-   "source": [
-    "Luego, podemos realizar una llamada al modelo:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdceea1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "messages = [\n",
-    "    SystemMessage(\"Translate the following from English into Italian\"),\n",
-    "    HumanMessage(\"hi!\"),\n",
+    "    SystemMessage(str(\"Translate the following from English into Italian\")),\n",
+    "    HumanMessage(str(\"hi!\")),\n",
     "]\n",
     "\n",
-    "model.invoke(messages)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "303d9b01",
-   "metadata": {},
-   "source": [
-    "Otras alternativas:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a527542a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.invoke(\"Hello\")\n",
     "\n",
-    "model.invoke([{\"role\": \"user\", \"content\": \"Hello\"}])\n",
-    "\n",
-    "model.invoke([HumanMessage(\"Hello\")])"
+    "print(messages)"
    ]
   },
   {
@@ -195,8 +227,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for token in model.stream(messages):\n",
-    "    print(token.content, end=\"|\")"
+    "from langchain_openai import OpenAI\n",
+    "from langchain_core.messages import HumanMessage\n",
+    "\n",
+    "api_key = \"aca va la clave\" \n",
+    "\n",
+    "print(f\"Clave API utilizada: {api_key}\") \n",
+    "\n",
+    "model = OpenAI(model=\"gpt-3.5-turbo\", api_key=api_key)\n",
+    "response = model.invoke([HumanMessage(content=\"Hello\")])\n",
+    "\n",
+    "print(response)"
    ]
   },
   {
@@ -216,11 +257,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.invoke(\"Hello\")\n",
+    "from langchain_openai import OpenAI\n",
+    "from langchain_core.messages import HumanMessage\n",
+    "api_key = \"sk-...\" \n",
     "\n",
-    "model.invoke([{\"role\": \"user\", \"content\": \"Hello\"}])\n",
+    "print(f\"Clave API utilizada: {api_key}\")\n",
     "\n",
-    "model.invoke([HumanMessage(\"Hello\")])"
+    "model = OpenAI(model=\"gpt-3.5-turbo\", api_key=api_key)\n",
+    "\n",
+    "response = model.invoke([HumanMessage(content=\"Hello\")])\n",
+    "\n",
+    "print(response)"
    ]
   },
   {
@@ -235,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ae835d06-f4fb-4492-b85f-a76a13e27e8c",
    "metadata": {},
    "outputs": [],
@@ -260,10 +307,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "045ade34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SystemMessage(content='Translate the following from English into Italian', additional_kwargs={}, response_metadata={}), HumanMessage(content='hi!', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = prompt_template.invoke({\"language\": \"Italian\", \"text\": \"hi!\"})\n",
     "print(prompt.to_messages())"
@@ -284,7 +339,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain_openai import OpenAI\n",
+    "\n",
+    "api_key = \"sk-...\" \n",
+    "\n",
+    "print(f\"Clave API utilizada: {api_key}\") \n",
+    "model = OpenAI(model=\"gpt-3.5-turbo\", api_key=api_key)\n",
+    "prompt = \"Escribe un breve resumen de la historia de la inteligencia artificial.\"\n",
+    "\n",
     "response = model.invoke(prompt)\n",
+    "\n",
     "print(response.content)"
    ]
   },
